@@ -26,7 +26,7 @@ package {
 			var SWFUpload:SWFUpload = new SWFUpload();
 		}
 		
-		private const build_number:String = "SWFUPLOAD 2.0 2007-11-05 09:20:00";
+		private const build_number:String = "SWFUPLOAD 2.0 2007-11-08 0001";
 		
 		// State tracking variables
 		private var fileBrowserMany:FileReferenceList = new FileReferenceList();
@@ -177,6 +177,7 @@ package {
 				ExternalInterface.addCallback("SelectFile", this.SelectFile);
 				ExternalInterface.addCallback("SelectFiles", this.SelectFiles);
 				ExternalInterface.addCallback("StartUpload", this.StartUpload);
+				ExternalInterface.addCallback("ReturnUploadStart", this.ReturnUploadStart);
 				ExternalInterface.addCallback("StopUpload", this.StopUpload);
 				ExternalInterface.addCallback("CancelUpload", this.CancelUpload);
 				
@@ -636,6 +637,9 @@ package {
 			if (this.current_file_item != null) {
 				// Begin the upload
 				this.Debug("Event: uploadStart : File ID: " + this.current_file_item.id);
+				ExternalCall.UploadStart(this.uploadStart_Callback, this.current_file_item.ToJavaScriptObject());
+				
+				/* // Note: This code was moved to ReturnUploadStart as a work-around to the Flash/JS circular call issue
 				var start_upload:Boolean = ExternalCall.UploadStart(this.uploadStart_Callback, this.current_file_item.ToJavaScriptObject());
 				
 				// Validate the file
@@ -683,6 +687,7 @@ package {
 					ExternalCall.UploadError(this.uploadError_Callback, this.ERROR_CODE_FILE_VALIDATION_FAILED, js_object, "Call to uploadStart return false. Not uploading file.");
 					this.Debug("startFile(): upload failed startUpload validation event. File re-queued.");
 				}
+				*/
 			}
 			// Otherwise we've would have looped through all the FileItems. This means the queue is empty)
 			else {
@@ -690,6 +695,59 @@ package {
 			}
 		}
 
+		// This starts the upload when the user returns TRUE from the uploadStart event.  Rather than just have the value returned from
+		// the function we do a return function call so we can use the setTimeout work-around for Flash/JS circular calls.
+		private function ReturnUploadStart(start_upload:Boolean):void {
+			if (this.current_file_item == null) {
+				this.Debug("ReturnUploadStart called but file was no longer queued. This is okay if the file was stopped or cancelled.");
+				return;
+			}
+			
+			if (start_upload) {
+				try {
+					// Set the event handlers
+					this.current_file_item.file_reference.addEventListener(ProgressEvent.PROGRESS, this.FileProgress_Handler);
+					this.current_file_item.file_reference.addEventListener(IOErrorEvent.IO_ERROR, this.IOError_Handler);
+					this.current_file_item.file_reference.addEventListener(SecurityErrorEvent.SECURITY_ERROR, this.SecurityError_Handler);
+					this.current_file_item.file_reference.addEventListener(HTTPStatusEvent.HTTP_STATUS, this.HTTPError_Handler);
+					this.current_file_item.file_reference.addEventListener(DataEvent.UPLOAD_COMPLETE_DATA, this.ServerData_Handler);
+					
+					// Upload the file
+					var request:URLRequest = this.BuildRequest();
+					
+					this.Debug("startFile(): File Reference found. File accepted by startUpload event.  Starting upload to " + request.url + " for File ID: " + this.current_file_item.id);
+					this.current_file_item.file_reference.upload(request, this.filePostName, false);
+				} catch (ex:Error) {
+					this.upload_errors++;
+					this.current_file_item.file_status = FileItem.FILE_STATUS_ERROR;
+					var message:String = ex.errorID + "\n" + ex.name + "\n" + ex.message + "\n" + ex.getStackTrace();
+					this.Debug("Event: uploadError(): Unhandled exception: " + message);
+					ExternalCall.UploadError(this.uploadError_Callback, this.ERROR_CODE_UPLOAD_FAILED, this.current_file_item.ToJavaScriptObject(), message);
+					
+					this.UploadComplete();
+				}
+				this.current_file_item.file_status = FileItem.FILE_STATUS_IN_PROGRESS;
+
+			} else {
+				this.Debug("Event: uploadError : Call to uploadStart returned false. Not uploading file.");
+				
+				// Remove the event handlers
+				this.current_file_item.file_reference.removeEventListener(ProgressEvent.PROGRESS, this.FileProgress_Handler);
+				this.current_file_item.file_reference.removeEventListener(IOErrorEvent.IO_ERROR, this.IOError_Handler);
+				this.current_file_item.file_reference.removeEventListener(SecurityErrorEvent.SECURITY_ERROR, this.SecurityError_Handler);
+				this.current_file_item.file_reference.removeEventListener(HTTPStatusEvent.HTTP_STATUS, this.HTTPError_Handler);
+				this.current_file_item.file_reference.removeEventListener(DataEvent.UPLOAD_COMPLETE_DATA, this.ServerData_Handler);
+
+				// Re-queue the FileItem
+				this.current_file_item.file_status = FileItem.FILE_STATUS_QUEUED;
+				var js_object:Object = this.current_file_item.ToJavaScriptObject();
+				this.file_queue.unshift(this.current_file_item);
+				this.current_file_item = null;
+				
+				ExternalCall.UploadError(this.uploadError_Callback, this.ERROR_CODE_FILE_VALIDATION_FAILED, js_object, "Call to uploadStart return false. Not uploading file.");
+				this.Debug("startFile(): upload rejected by startUpload event. File re-queued.");
+			}
+		}
 
 		// Completes the file upload by deleting it's reference, advancing the pointer.
 		// Once this event files a new upload can be started.
